# comfyui_prompt_assistant

./: .gitignore  Overview.md  README.md  __init__.py  config.json.example  config_manager.py  overview.md  pyproject.toml  requirements.txt  server.py
.github/workflows/: publish_action.yml
config/: config_template.json  kontext_presets.json  kontext_presets_template.json  system_prompts_template.json  tags.json  tags_template.json
js/: index.js  version.js
js/config/: 01起手式.json  02人物.json  03服饰.json  04人物发型.json  05动作.json  06面部表情.json  features.js  system_prompts.json  tags.json  动物装饰.json  场景道具.json  抽卡机.json  颜色.json
js/css/: assistant.css  captionFrame.css  common.css  icon.css  popup.css  settings.css  uiComponents.css
js/modules/: AssistantContainer.js  PromptAssistant.js  apiConfigManager.js  history.js  imageCaption.js  nodeHelpTranslator.js  rulesConfigManager.js  settings.js  tag.js  tagConfigManager.js  uiComponents.js
js/node/: captionFrame.js
js/nodes/: toastListener.js
js/services/: NodeMountService.js  api.js  baidu.js  btnMenu.js  cache.js  features.js  interceptor.js  llm.js  llm_v.js  缓存说明.md
js/utils/: UIToolkit.js  eventManager.js  logger.js  markdownNoteTranslate.js  md5.js  popupManager.js  promptFormatter.js  resourceManager.js
locales/en/: nodeDefs.json
locales/zh/: nodeDefs.json
locales/zh-TW/: nodeDefs.json
node/: __init__.py  expand_node.py  image_caption_node.py  kontext_preset_node.py  translate_node.py  video_caption_node.py
node/base/: __init__.py  base_node.py  llm_node_base.py  vlm_node_base.py
services/: __init__.py  baidu.py  core.py  error_util.py  llm.py  llm_v.py  model_list.py  openai_base.py  thinking_control.py  vlm.py
utils/: __init__.py  common.py  image.py  migration_tool.py  video.py
